2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/18_mod_bool_bool.deca
// Description :
//      opération modulo entre duex boolean 
// Resultats :
//    Erreur Contexteulle : ligne 12 : l'opération % n'est pas possible entre 'boolean' et 'boolean'
//
// Historique :
// cree le 10/01/2024

{
    boolean b1 = true ;
    boolean b2 = false ;
    b1%b2 ;
}